<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/zubeijing">

    <ScrollView
        android:id="@+id/agdrq"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/lbs"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:textSize="18sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/bstp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerInside" />

            </LinearLayout>

            <EditText
                android:id="@+id/bz"
                style="@style/add_text"
                android:hint="@string/bzxx"
                android:inputType="text"/>

            <EditText
                android:id="@+id/user"
                style="@style/add_text"
                android:hint="@string/user"
                android:inputType="textUri"/>

            <EditText
                android:id="@+id/pwd"
                style="@style/add_text"
                android:hint="@string/pwd"
                android:textColor="@color/pwd"
                android:inputType="textVisiblePassword"/>

            <EditText
                android:id="@+id/url"
                style="@style/add_text"
                android:hint="@string/url"
                android:textColor="@color/url"
                android:inputType="textUri"/>

            <EditText
                android:id="@+id/bz2"
                style="@style/add_text"
                android:hint="@string/bzxx2"
                android:inputType="text"/>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="bottom|center"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="100">

                <Button
                    android:id="@+id/bcxx"
                    style="@style/add_button"
                    android:text="@string/bcxx" />

                <Button
                    android:id="@+id/qx"
                    style="@style/add_button"
                    android:layout_marginStart="20dp"
                    android:text="@string/qx" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="1"
                android:contextClickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/openhelp"
                    android:textSize="16sp" />

                <ImageView style="@style/xq_img"
                    android:id="@+id/help_img"
                    android:src="@drawable/bootom"/>

            </LinearLayout>
            <!--帮助信息-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/help"
                android:textSize="16sp"
                android:visibility="gone"
                android:id="@+id/help_txt"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>